# fundus

./: CMakeLists.txt  LICENSE  README.md  fundusConfig.cmake
common/: arguments.hpp  enum.hpp  enums.hpp  error.hpp  format.hpp  guard.hpp  log.hpp  log.ipp  q_macro.h  result.hpp
common/logger/: glog_logger.hpp  ilogging2_logger.hpp  ilogging_logger.hpp  logger_tools.hpp  logger_tools.ipp  spdlog_logger.hpp  stdout_logger.hpp  syslog_logger.hpp
tests/: CMakeLists.txt  arguments_tests.cpp  enum_tests.cpp  format_tests.cpp  guard_tests.cpp  log_tests.cpp  result_tests.cpp
